--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 	<title>Hello Coursea!</title>
 </head>
 <body>
-<h1>Hello coursea</h1>
+<h1>Hello coursea, it's a great course</h1>
 </body>
 </html>
