--- a/site/index.html
+++ b/site/index.html
@@ -2,9 +2,20 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Hello Coursea!</title>
+	<title>HTML is Structure Only (After)</title>
 </head>
 <body>
-<h1>Hello coursea, it's a great course</h1>
+	<h1 style = "color: green; font-size: 60px; text-align: center;">
+		HTML is Structure only
+	</h1>
+	<p style="margin: 0 100px 0 100px;font-size: 1.5em;">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+	<footer>
+		<hr>
+		<p style="text-align: center;"
+		onclick="alert('EMAILING US IS USELESS');">
+			Tech Support : yeah.right@server-is-down.com
+		</p>
+	</footer>
 </body>
 </html>
