--- a/site/test-ex.html
+++ b/site/test-ex.html
@@ -1,4 +1,5 @@
-
+<!DOCTYPE html>
+<html>
 <div>Dear all,
 <span>I took this really cool course
 </span></div>
@@ -15,3 +16,4 @@ out of 5 stars?
 Thank you,
 -Yaakov.... I mean a random student! Definitely not Yaakov.
 </div>
+</html>
