--- a/site/test-ex.html
+++ b/site/test-ex.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    testing the exercise
+  </head>
 <div>Dear all,
 <span>I took this really cool course
 </span></div>
