--- a/site/test-ex.html
+++ b/site/test-ex.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>
     testing the exercise
+    </title>
   </head>
 <div>Dear all,
 <span>I took this really cool course
